--- a/src/app.css
+++ b/src/app.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 @layer components {
-	.btn {
-		@apply bg-blue-700 px-6 py-3 rounded-lg shadow-lg font-semibold text-sm text-white inline-block text-center  mx-3;
-	};
-	.pill{
-		@apply min-w-full py-5 text-blue-500 inline-block bg-rose-100 px-4 sm:py-2 border-white hover:bg-rose-500 hover:text-rose-100 rounded-md 
+	body {
+		@apply bg-background;
 	}
-};
+	.pill {
+		@apply text-center font-semibold py-3 text-headline flex px-4 transition ease-in-out delay-150 hover:-translate-y-2  duration-300;
+	}
+} ;
