--- a/src/app.css
+++ b/src/app.css
@@ -9,4 +9,7 @@
 	.pill {
 		@apply text-center font-semibold py-3 text-headline flex px-4 transition ease-in-out delay-150 hover:-translate-y-2  duration-300;
 	}
+	.window-btn{
+		@apply inline-block h-3 w-3 rounded-[50%] bg-headline border-2 border-buttonText absolute top-[10px]
+	}
 } ;
